# opentx

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  BLACKLIST.txt  CMakeLists.txt  CMakeLists.txt.user.9f6172c  CREDITS.txt  DONATIONS.txt  HORUS X12S, X9D, Companion option FrSky (Cable)  Makefile  README.md  README.txt  TODO.md  TODO.txt  ardupilot.cpp  ardupilot.h  audio.cpp  audio.h  beeper.cpp  beeper.h  board_ersky9x.cpp  board_ersky9x.h  board_gruvin9x.cpp  board_stock.cpp  build-lua-serialread.bash  build_all.sh  changelog.txt  compile.bat  diskio-test.cpp  diskio.cpp  diskio.h  drivers.cpp  eeprom_arm.cpp  eeprom_arm.h  eeprom_avr.cpp  eeprom_avr.h  eeprom_v4.h  export.cpp  (+67 more)
companion/src/: CMakeLists.txt  appdata.cpp  appdata.h  appdebugmessagehandler.cpp  appdebugmessagehandler.h  apppreferencesdialog.cpp  apppreferencesdialog.h  apppreferencesdialog.ui  avroutputdialog.cpp  avroutputdialog.h  avroutputdialog.ui  boards.cpp  boards.h  burnconfigdialog.cpp  burnconfigdialog.h  burnconfigdialog.ui  burndialog.cpp  burndialog.h  burndialog.ui  companion.cpp  companion.desktop  companion.desktop.in  companion.qrc  companion9x.desktop  companion9x.qrc  comparedialog.cpp  comparedialog.h  comparedialog.ui  constants.h  contributorsdialog.cpp  contributorsdialog.h  contributorsdialog.ui  converteeprom.cpp  converteeprom.h  creditsdialog.cpp  creditsdialog.h  cursorwidget.h  customdebug.cpp  customdebug.h  customizesplashdialog.cpp  (+153 more)
companion/src/cmake/: FindPhonon.cmake  FindPortAudio.cmake  FindSdl.cmake  FindXercesC.cmake  FindXsd.cmake  Macros.cmake
companion/src/datamodels/: CMakeLists.txt  compounditemmodels.cpp  compounditemmodels.h  filtereditemmodels.cpp  filtereditemmodels.h  itemmodelfactory.cpp  itemmodelfactory.h  rawitemdatamodels.cpp  rawitemdatamodels.h  rawitemfilteredmodel.cpp  rawitemfilteredmodel.h  rawsourceitemmodel.cpp  rawsourceitemmodel.h
companion/src/dialogs/: filesyncdialog.cpp  filesyncdialog.h
companion/src/firmwares/: CMakeLists.txt  adjustmentreference.cpp  adjustmentreference.h  afhds3.cpp  afhds3.h  boards.cpp  boards.h  curvedata.cpp  curvedata.h  curvereference.cpp  curvereference.h  customfunctiondata.cpp  customfunctiondata.h  datahelpers.cpp  datahelpers.h  eepromimportexport.h  eeprominterface.cpp  eeprominterface.h  flightmodedata.cpp  flightmodedata.h  generalsettings.cpp  generalsettings.h  gvardata.cpp  gvardata.h  heli_data.cpp  heli_data.h  helpersdata.h  input_data.cpp  input_data.h  io_data.cpp  io_data.h  logicalswitchdata.cpp  logicalswitchdata.h  mixdata.cpp  mixdata.h  modeldata.cpp  modeldata.h  moduledata.cpp  moduledata.h  multiprotocols.cpp  (+16 more)
companion/src/generaledit/: CMakeLists.txt  calibration.cpp  calibration.h  calibration.ui  generaledit.cpp  generaledit.h  generaledit.ui  generalsetup.cpp  generalsetup.h  generalsetup.ui  hardware.cpp  hardware.h  hardware.ui  setup.cpp  setup.h  setup.ui  trainer.cpp  trainer.h  trainer.ui
companion/src/images/: .gitignore  iconmac.icns
companion/src/modeledit/: CMakeLists.txt  channels.cpp  channels.h  checklistdialog.cpp  checklistdialog.h  checklistdialog.ui  curvedialog.ui  curves.cpp  curves.h  curves.ui  customfunctions.cpp  customfunctions.h  customswitches.cpp  customswitches.h  edge.cpp  edge.h  expodialog.cpp  expodialog.h  expodialog.ui  flightmode.ui  flightmodes.cpp  flightmodes.h  heli.cpp  heli.h  heli.ui  inputs.cpp  inputs.h  logicalswitches.cpp  logicalswitches.h  mixerdialog.cpp  mixerdialog.h  mixerdialog.ui  mixerslist.cpp  mixerslist.h  mixerslistwidget.cpp  mixerslistwidget.h  mixes.cpp  mixes.h  modeledit.cpp  modeledit.h  (+23 more)
companion/src/qcustomplot/: CMakeLists.txt  qcustomplot.h
companion/src/qxtcommandoptions/: AUTHORS  CHANGES  CMakeLists.txt  cpl1.0.txt  qxtcommandoptions.cpp  qxtcommandoptions.h  qxtglobal.h
companion/src/shared/: CMakeLists.txt  autobitsetcheckbox.cpp  autobitsetcheckbox.h  autocheckbox.cpp  autocheckbox.h  autocombobox.cpp  autocombobox.h  autodoublespinbox.cpp  autodoublespinbox.h  autohexspinbox.cpp  autohexspinbox.h  autolabel.cpp  autolabel.h  autolineedit.cpp  autolineedit.h  autoprecisioncombobox.cpp  autoprecisioncombobox.h  autoslider.cpp  autoslider.h  autospinbox.cpp  autospinbox.h  autotimeedit.cpp  autotimeedit.h  autowidget.cpp  autowidget.h  autowidgets.h  foldersync.cpp  genericpanel.cpp  genericpanel.h  hexspinbox.cpp  hexspinbox.h  timeredit.cpp  timeredit.h  verticalscrollarea.cpp  verticalscrollarea.h
companion/src/simulation/: CMakeLists.txt  buttonswidget.h  debugoutput.cpp  debugoutput.h  debugoutput.ui  dialwidget.h  filteredtextbuffer.cpp  filteredtextbuffer.h  joystick.cpp  joystick.h  joystickdialog.cpp  joystickdialog.h  joystickdialog.ui  lcdwidget.h  main.cpp  myqdial.h  myslider.h  radiooutputswidget.cpp  radiooutputswidget.h  radiooutputswidget.ui  radiouiaction.h  simulateduiwidget.cpp  simulateduiwidget.h  simulateduiwidget9X.cpp  simulateduiwidget9X.ui  simulateduiwidgetCommando8.cpp  simulateduiwidgetCommando8.ui  simulateduiwidgetJumperT12.cpp  simulateduiwidgetJumperT12.ui  simulateduiwidgetJumperT16.cpp  simulateduiwidgetJumperT16.ui  simulateduiwidgetJumperT18.cpp  simulateduiwidgetJumperT18.ui  simulateduiwidgetJumperTLITE.cpp  simulateduiwidgetJumperTLITE.ui  simulateduiwidgetJumperTPRO.cpp  simulateduiwidgetJumperTPRO.ui  simulateduiwidgetT8.cpp  simulateduiwidgetT8.ui  simulateduiwidgetTX12.cpp  (+58 more)
companion/src/simulator/: CMakeLists.txt  simulatordialog.cpp  simulatorimport.h
companion/src/storage/: CMakeLists.txt  appdata.cpp  appdata.h  otx.h  (+30 more)
radio/src/: .gitignore  2803_006_German_Test  CMakeLists.txt  FreeRTOSConfig.h  Makefile  audio.cpp  audio.h  audio_arm.cpp  audio_arm.h  audio_avr.cpp  audio_avr.h  bin_allocator.cpp  bin_allocator.h  bitfield.h  bluetooth.cpp  bluetooth.h  bmp.cpp  bootflashX.lbm  build.sh  buzzer.cpp  buzzer.h  chksize.h  cli.cpp  cli.h  crc.cpp  crc.h  crc16.cpp  curves.cpp  curves.h  dataconstants.h  datastructs.h  debounce.h  debug.cpp  debug.h  debug_timers.h  definitions.h  disk_cache.cpp  disk_cache.h  dmafifo.h  dump.cpp  (+109 more)
(+4869 files in other folders)
